--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
   <h1> welcome </h1>
-  <p> Join us<a href="https://discord.gg/DJnb2d">here</a> </p>
-<img src=style="width:50%">
+  <p> Join us <a href="https://discord.gg/DJnb2d">here</a> </p>
+<!-- <img src=style="width:50%"> -->
 
 </body>
 </html>
