better relative URL handling

--- a/twitter.html
+++ b/twitter.html
@@ -1,4 +1,4 @@
 ---
 layout: redirect
 ---
-{{ site.twitter.username | prepend: 'https://twitter.com/' }}
+https://twitter.com/{{ site.twitter.username }}
