--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
       </div>
       <div class="col-sm my-2">
         <a href="https://github.com/blod722/gary-bot" class="btn btn-info btn-lg btn-block">
-          <img src="/assets/garythinkclaw" viewBox="0 0 512 512" class="faicon">
+          <img src="/assets/garythinkclaw.png" viewBox="0 0 512 512" class="faicon">
           Gary Bot - Our community run meme provider
         </a>
       </div>
