--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
       </div>
       <div class="col-sm my-2">
         <a href="https://github.com/blod722/gary-bot" class="btn btn-info btn-lg btn-block">
-          <img src="./assets/garythinkclaw.png">
+          <img src="./assets/garythinkclaw.png" width="512" height="512">
           Gary Bot - Our community run meme provider
         </a>
       </div>
